grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

/**
 * Tree-sitter grammar for opam package manager files
 *
 * Based on opam file format specification from:
 * https://github.com/ocaml/opam/tree/master/src_ext/opam-file-format
 */

const PREC = {
  COMMENT: 0,
  STRING: 1,
  ATOM: 2,
  PFXOP: 3,
  RELOP: 4,
  ENVOP: 5,
  AND: 6,
  OR: 7,
  OPTION: 8,
};

module.exports = grammar({
  name: 'opam',

  word: ($) => $.ident,

  externals: ($) => [$.block_comment],

  extras: ($) => [$.comment, /\s+/],

  conflicts: ($) => [
    [$.relop, $.envop],
  ],

  rules: {
    source_file: ($) => repeat($._item),

    _item: ($) => choice($.variable, $.section),

    // Variables: ident: value
    variable: ($) =>
      seq(
        field('name', $.ident),
        ':',
        field('value', $._value),
      ),

    // Sections: ident { items } or ident "string" { items }
    section: ($) =>
      seq(
        field('kind', $.ident),
        optional(field('name', $.string)),
        '{',
        field('items', repeat($._item)),
        '}',
      ),

    // Values (hidden rule — purely a grouping choice, so it should not
    // appear as a named node in the tree; its children are promoted to
    // direct children of the enclosing node)
    _value: ($) =>
      choice(
        $.atom,
        $.group,
        $.list,
        $.option_value,
        $.logop_value,
        $.relop_value,
        $.env_binding,
        $.prefix_relop,
        $.pfxop_value,
      ),

    // Atoms (base values)
    atom: ($) => choice($.ident, $.bool, $.int, $.string, $.filter_ident),

    // Filter scope constants (well-known identifiers in filter expressions)
    filter_ident: ($) =>
      choice('build', 'post', 'with-test', 'with-doc', 'with-dev-setup', 'pinned', 'dev'),

    // Groups: (value1 value2 ...)
    group: ($) =>
      prec(
        PREC.ATOM,
        seq('(', field('values', repeat($._value)), ')'),
      ),

    // Lists: [value1 value2 ...]
    list: ($) =>
      prec(
        PREC.ATOM,
        seq('[', field('values', repeat($._value)), ']'),
      ),

    // Options: value {value1 value2 ...}
    option_value: ($) =>
      prec.right(
        PREC.OPTION,
        seq(
          field('value', $._value),
          '{',
          field('options', repeat($._value)),
          '}',
        ),
      ),

    // Logical operations: value & value, value | value
    logop_value: ($) =>
      choice(
        prec.left(
          PREC.AND,
          seq(field('left', $._value), '&', field('right', $._value)),
        ),
        prec.left(
          PREC.OR,
          seq(field('left', $._value), '|', field('right', $._value)),
        ),
      ),

    // Relational operations: atom relop atom
    relop_value: ($) =>
      prec(
        PREC.RELOP,
        seq(
          field('left', $.atom),
          field('operator', $.relop),
          field('right', $.atom),
        ),
      ),

    // Environment bindings: atom envop atom
    env_binding: ($) =>
      prec(
        PREC.ENVOP,
        seq(
          field('variable', $.atom),
          field('operator', $.envop),
          field('value', $.atom),
        ),
      ),

    // Prefix relational operators: relop atom (e.g., < "4.07.0")
    prefix_relop: ($) =>
      prec(
        PREC.RELOP,
        seq(field('operator', $.relop), field('value', $.atom)),
      ),

    // Prefix operators: !value, ?value
    pfxop_value: ($) =>
      prec(
        PREC.PFXOP,
        seq(field('operator', $.pfxop), field('value', $._value)),
      ),

    // Relational operators: =, !=, >=, >, <=, <, ~
    relop: ($) => choice('=', '!=', '>=', '>', '<=', '<', '~'),

    // Logical operators (already covered inline)

    // Prefix operators: !, ?
    pfxop: ($) => choice('!', '?'),

    // Environment update operators: =, +=, =+, :=, =:, =+=
    envop: ($) => choice('=', '+=', '=+', ':=', '=:', '=+='),

    // Boolean literals
    bool: ($) => choice('true', 'false'),

    // Integer literals
    int: ($) => token(seq(optional('-'), /[0-9_]+/)),

    // String literals
    string: ($) =>
      choice(
        // Regular quoted string
        seq(
          '"',
          repeat(choice($._string_content, $.escape_sequence, $.interpolation, $._bare_percent)),
          '"',
        ),
        // Triple-quoted string
        seq(
          '"""',
          alias(
            repeat(choice($._string_content_triple, $.escape_sequence, $.interpolation, $._bare_percent)),
            'string_content',
          ),
          '"""',
        ),
      ),

    _string_content: ($) =>
      token.immediate(prec(PREC.STRING, /[^"\\%]+/)),

    _string_content_triple: ($) =>
      token.immediate(prec(PREC.STRING, choice(
        /[^"\\%]+/,
        /"[^"]/,
        /""[^"]/,
      ))),

    // Variable interpolation: %{...}%
    interpolation: ($) =>
      seq(
        token.immediate('%{'),
        optional($.interpolation_content),
        token.immediate('}%'),
      ),

    interpolation_content: ($) =>
      token.immediate(/[^}]+/),

    // Bare percent sign (not followed by '{')
    _bare_percent: ($) =>
      token.immediate('%'),

    escape_sequence: ($) =>
      token.immediate(
        prec(
          PREC.STRING,
          seq(
            '\\',
            choice(
              /[\\'"nrtb ]/,
              /[0-9]{3}/,
              /x[0-9a-fA-F]{2}/,
              /\r?\n[ \t]*/,
            ),
          ),
        ),
      ),

    // Identifiers
    ident: ($) => {
      // ichar = alpha | digit | ['_' '-']
      // id = ichar* alpha ichar*
      // ident = (id | '_') ('+' (id | '_'))* (':' id)?
      const id = /[a-zA-Z0-9_-]*[a-zA-Z][a-zA-Z0-9_-]*/;

      // Simplified pattern for identifiers
      return token(
        seq(
          choice(id, '_'),
          repeat(seq('+', choice(id, '_'))),
          optional(seq(':', id)),
        ),
      );
    },

    // Comments
    comment: ($) =>
      choice(
        // Line comments starting with #
        token(prec(PREC.COMMENT, seq('#', /[^\n]*/))),
        // Block comments with nesting support (external scanner)
        $.block_comment,
      ),
  },
});
