test/corpus/strings_and_special.txt
================================================================================
Triple-quoted multi-line string
================================================================================

description: """
This is a longer description
that spans multiple lines.
"""

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
String with escape sequences
================================================================================

synopsis: "Line 1\nLine 2\tTabbed"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (escape_sequence)
        (escape_sequence)))))

================================================================================
String with quotes
================================================================================

description: "This has \"quoted\" text"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (escape_sequence)
        (escape_sequence)))))

================================================================================
Identifiers with special characters
================================================================================

depends: [
  "base-unix"
  "ocaml-base-compiler"
  "conf-libev"
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (atom
        (string))
      values: (atom
        (string))
      values: (atom
        (string)))))

================================================================================
Version with tilde
================================================================================

version: "6.0.0~alpha00"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Version with plus
================================================================================

depends: [
  "ocaml-variants" {= "5.1.0~alpha1+options"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string)))))))

================================================================================
Boolean values
================================================================================

build-test: true
build-doc: false

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (bool)))
  (variable
    name: (ident)
    value: (atom
      (bool))))

================================================================================
Integer values
================================================================================

priority: 100
some-count: -42

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (int)))
  (variable
    name: (ident)
    value: (atom
      (int))))

================================================================================
Empty list
================================================================================

patches: []

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list)))

================================================================================
Empty group
================================================================================

extra: ()

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (group)))

================================================================================
Colon in identifier
================================================================================

post-messages: [
  "Note: This package is experimental"
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (atom
        (string)))))

================================================================================
Underscores in identifier
================================================================================

dev_repo: "git+https://github.com/user/repo.git"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Simple variable interpolation
================================================================================

name: "%{name}%"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))))))

================================================================================
Package-scoped variable interpolation
================================================================================

x: "%{conf-libev:installed}%"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))))))

================================================================================
Mixed text and interpolation
================================================================================

x: "Package %{name}% version %{version}%"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))
        (interpolation
          (interpolation_content))))))

================================================================================
Converter form interpolation
================================================================================

x: "%{pkg:var?yes:no}%"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))))))

================================================================================
Interpolation in triple-quoted string
================================================================================

x: """%{name}%"""

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))))))

================================================================================
Multiple interpolations in one string
================================================================================

x: "%{name}%-%{version}%"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string
        (interpolation
          (interpolation_content))
        (interpolation
          (interpolation_content))))))
